@@ -1,0 +1,8 @@
+//------------------------------------------------------------------------------
+// File generated by LCD Assistant
+// http://en.radzio.dxp.pl/bitmap_converter/
+//------------------------------------------------------------------------------
+
+const unsigned char tinu16x8_data [] PROGMEM = {
+0x00, 0xAA, 0x55, 0x01, 0x0D, 0x05, 0x65, 0x41, 0xD1, 0x51, 0x71, 0x11, 0x15, 0x11, 0x0E, 0x00
+};
